src/examples/errors/17_for_loop_non_int.veri
// Error: For loop bounds must be integers
// Expected error: E001 - Type mismatch

fn main() {
    for i in true..false {
        let x: int = i;
    }
}
